[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/cbltest"
]

[project]
name = "raider_eros_montin"
version = "0.1.4"
authors = [
  { name="Dr. Eros Montin, PhD", email="eros.montin@gmail.com" },
]
description = "a tool for managing twix"
readme = "README.md"
requires-python = ">=3.6"


dependencies = ["twixtools @ git+https://github.com/pehses/twixtools.git","ismrmrd","numpy","ismrmrd-python-tools @ git+https://github.com/ismrmrd/ismrmrd-python-tools.git"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/erosmontin/raider"
"Bug Tracker" = "https://github.com/erosmontin/raider/issues"

